bug(qrscanner): fix scan on ios

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,8 +4,8 @@
 @import "../assets/styles/toast";
 @import "../../node_modules/ionic2-auto-complete/auto-complete";
 
-ion-app.md {
-  background: transparent;
+ion-app.transparent {
+  background: none transparent;
 }
 
 #sidebarMenu {
