--- a/src/modals/qr-scanner/qr-scanner.scss
+++ b/src/modals/qr-scanner/qr-scanner.scss
@@ -1,6 +1,6 @@
 modal-qr-scanner {
-  .content-md {
-    background-color: transparent;
+  .content {
+    background: transparent !important;
 
     ion-row {
       align-items: center;
