--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -49,7 +49,7 @@ $colors: (
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
-
+$content-ios-transition-background: transparent;
 
 
 
